(Service) Update GetAll Daily-Record
